<resources>
    <string name="app_name">FamilyPlanning</string>
    <string name="getstartedbutton">Get Started</string>
    <string name="intro_1">Intro 1</string>
    <string name="intro_desc">Lorem ipsum dolor sit amet, modus iriure recteque pri cu. Case porro noluisse an est.</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="farsi">Farsi</string>
    <string name="french">French</string>
    <string name="title_activity_navigation_drawer">Family Planning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="where_gethelp">Where do I get help?</string>
    <string name="map">Map</string>
    <string name="pregnancy">Pregnancy advisory</string>
    <string name="general_info">General information</string>
    <string name="chat">Chat</string>
    <string name="title_activity_maps">Map</string>
    <string name="institution_name">Institution Name</string>
    <string name="select">Select your language</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="create_new_account">Create a new account</string>
    <string name="register">Register</string>
    <string name="password_reset">By clicking RESET you will receive an email to reset your passwrod</string>
    <string name="shqip">Albanian</string>
</resources>
