<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/u184"
            android:title="@string/where_gethelp" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/u182"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_pregnancy"
            android:icon="@drawable/u186"
            android:title="@string/pregnancy" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/u188"
            android:title="@string/general_info" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />
    </group>

 <!--   <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
